# basic_python_project

./: Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
